Added transfer, more improvements.

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -4,3 +4,8 @@ spring.datasource.password=tester
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
+
+spring.mail.host=127.0.0.1
+spring.mail.port=1025
+
+coyote-credit.base-url=http://localhost:8080
