Added user notifications, improved transfer interface, and some refactoring.

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -4,6 +4,7 @@ spring.datasource.password=tester
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
+spring.jpa.show-sql=false
 
 spring.mail.host=127.0.0.1
 spring.mail.port=1025
