Improved account transfer UI, added config-based api switch.

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -10,3 +10,4 @@ spring.mail.host=127.0.0.1
 spring.mail.port=1025
 
 coyote-credit.base-url=http://localhost:8080
+coyote-credit.enable-tradeable-updates=false
